Refactor auth-service configuration: externalize all hardcoded values to environment variables and add Spring profiles